--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,12 +21,21 @@ jobs:
         docker build . -f Dockerfile -t laussma/my-first-image:latest
         docker tag laussma/my-first-image:latest laussma/my-first-image:$GIT_SHA
 
+    - name: Run Trivy vulnerability scanner in repo mode
+      uses: aquasecurity/trivy-action@master
+      with:
+        scan-type: 'fs'
+        ignore-unfixed: true
+        format: 'sarif'
+        output: 'trivy-results.sarif'
+        severity: 'CRITICAL'
+
     - name: Run Trivy vulnerability scanner CRITICAL & HIGH
       uses: aquasecurity/trivy-action@master
       with:
         image-ref: 'docker.io/laussma/my-first-image:latest'
         format: 'table'
-        exit-code: '1'
+        exit-code: '0'
         ignore-unfixed: true
         vuln-type: 'os,library'
         severity: 'CRITICAL,HIGH'
@@ -41,11 +50,15 @@ jobs:
         vuln-type: 'os,library'
         severity: 'LOW,MEDIUM,UNKNOWN'
 
-    - name: Upload Trivy scan results to GitHub Security tab
-      uses: github/codeql-action/upload-sarif@v1
-      if: always() 
+    - name: Run Trivy vulnerability scanner in IaC mode
+      uses: aquasecurity/trivy-action@master
       with:
-        sarif_file: 'trivy-results.sarif'
+        scan-type: 'config'
+        hide-progress: false
+        format: 'table'
+        exit-code: '0'
+        ignore-unfixed: true
+        severity: 'CRITICAL,HIGH'
 
     - name: Push the Docker image
       run: |
